use ParameterizedTest to run random unit tests